# gesture_synchronizer

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  dependencies.rosinstall  package.xml
data/: mip_left_right_eyes.xml  test_mip_left_right_eyes.xml  test_octopus_circle.xml  test_tts_wait_ok.xml
doc/: README.md
include/gesture_synchronizer/: gesture_definitions.h  gesture_gui.h  gesture_io.h  gesture_synchronizer.h  interpolation_player.h  joint_player.h  simple_player.h
launch/: gui_simple_test.launch  launcher_gesture_synthesizer.launch  rosavatar.launch  simple_test.launch  test_mip.launch  test_octopus.launch  test_real_mip.launch  test_tts.launch
src/: CMakeLists.txt  gesture_gui.cpp  gesture_gui.ui  gesture_synchronizer.cpp  interpolation_player.cpp  simple_player.cpp
test/: CMakeLists.txt  gtest_gesture_io.cpp  gtest_gesture_synchronizer.cpp
