<?xml version="1.0"?>
<package format="2">
  <name>gesture_synchronizer</name>
  <version>0.0.0</version>
  <description>
    gesture_synchronizer
  </description>
  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <maintainer email="ipencina@ing.uc3m.es">ipencina</maintainer>
  <license>LGPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <!-- Arnaud -->
  <depend>gesture_msgs</depend>
  <depend>vision_utils</depend>
  <!-- System dependencies -->
  <depend>gnuplot</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
        <cpp cflags="-I${prefix} -I${prefix}/build"
         lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib"/>
  </export>
</package>
